add feature of adding item to firebase

--- a/app/src/main/res/layout/fragment_pizza_detail.xml
+++ b/app/src/main/res/layout/fragment_pizza_detail.xml
@@ -50,4 +50,16 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="(ADD)"
+        android:id="@+id/addItemButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
+
 </RelativeLayout>
