diplom first commit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,15 +16,22 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent" />-->
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
     <FrameLayout
         android:id="@+id/flContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="448dp"/>
 
     <Button
+        android:id="@+id/addItemButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="(Add Item)"
-        android:id="@+id/addItemButton"/>
+        android:onClick="onGoToNextActivityClick"
+        android:text="(Add Item)" />
 
 </LinearLayout>
